--- a/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
@@ -9,8 +9,6 @@
       data-ajax-success="AjaxSuccessPatient"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Telefone" }' />
-
     <div class="modal-body form-horizontal" id="">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -35,6 +33,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
