--- a/_source/LigaCancer/Views/TreatmentPlace/Partials/_AddTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Partials/_AddTreatmentPlace.cshtml
@@ -8,8 +8,6 @@
       data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Cidade" }' />
-
     <div class="modal-body form-horizontal">
         <h4>Cidade</h4>
         <hr />
@@ -23,6 +21,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
