--- a/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
@@ -8,8 +8,6 @@
       data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Cidade" }' />
-
     <div class="modal-body form-horizontal">
         <h4>Cidade</h4>
         <hr />
@@ -24,6 +22,6 @@
         <input asp-for="TreatmentPlaceId" />
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
