--- a/_source/LigaCancer/Views/CancerType/Partials/_AddCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Partials/_AddCancerType.cshtml
@@ -8,7 +8,6 @@
       data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Tipo de Câncer" }' />
     <div class="modal-body form-horizontal">
         <h4>Tipo de Câncer</h4>
         <hr />
@@ -22,5 +21,5 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 </form>
