--- a/_source/LigaCancer/Views/Doctor/Partials/_AddDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Partials/_AddDoctor.cshtml
@@ -8,8 +8,6 @@
       data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Médico" }' />
-
     <div class="modal-body form-horizontal">
         <h4>Médico</h4>
         <hr />
@@ -28,6 +26,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
