--- a/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
@@ -3,8 +3,6 @@
 
 <form id="formAddFile" asp-action="AddFileAttachment" method="post" enctype="multipart/form-data">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Arquivo" }' />
-
     <div class="modal-body form-horizontal" id="">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -30,6 +28,6 @@
         <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
