--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -63,7 +63,7 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
-                                    <a id="addMedicineButton" asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addMedicineButton" asp-action="AddMedicine" data-title="Adicionar Remédio" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Remédio
                                     </a>
                                 </div>
@@ -85,10 +85,10 @@
             </div>
         </div>
     </div>
-    <!-- /.conainer-fluid -->
+    <!-- /.container-fluid -->
 </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
+<partial name="_Modal" />
 
 @section scripts
     {
