--- a/_source/LigaCancer/Views/Medicine/Partials/_AddMedicine.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Partials/_AddMedicine.cshtml
@@ -8,9 +8,7 @@
       data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Remédio" }' />
-
-    <div class="modal-body form-horizontal">
+    <div class="modal-body">
         <h4>Remédio</h4>
         <hr />
 
@@ -23,6 +21,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter" />
 
 </form>
