--- a/_source/LigaCancer/Views/Medicine/Partials/_EditMedicine.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Partials/_EditMedicine.cshtml
@@ -8,9 +8,7 @@
       data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Remédio" }' />
-
-    <div class="modal-body form-horizontal">
+    <div class="modal-body">
         <h4>Remédio</h4>
         <hr />
 
@@ -24,6 +22,6 @@
         <input asp-for="MedicineId" />
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter" />
 
 </form>
