--- a/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
@@ -8,8 +8,6 @@
       data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Presença" }' />
-
     <div class="modal-body form-horizontal">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -31,6 +29,6 @@
 
     </div>
 
-    <partial name="_ModalFooter" model="new ModalFooter { }" />
+    <partial name="_ModalFooter"  />
 
 </form>
