--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -63,7 +63,7 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
-                                    <a id="addCancerTypeButton" asp-action="AddCancerType" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addCancerTypeButton" asp-action="AddCancerType" data-title="Adicionar Tipo de Câncer" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Tipo de Câncer
                                     </a>
                                 </div>
