--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -63,7 +63,7 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
-                                    <a id="addTreatmentPlaceButton" asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addTreatmentPlaceButton" asp-action="AddTreatmentPlace" data-title="Adicionar Cidade" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Cidade
                                     </a>
                                 </div>
