--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -10,6 +10,7 @@
         <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
         <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
         <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+        <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link href="~/dist/css/patient.min.css" rel="stylesheet" asp-append-version="true" />
@@ -32,83 +33,111 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
+                                <i class="fas fa-filter"></i> Filtros
+                                <div class="card-header-actions">
+                                    <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
+                                        <i class="fa fa-minus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card-block collapse show" id="filterCollapse">
+                                <form id="searchForm">
+                                    <div class="form-row">
+                                        @*<div class="form-row form-group">
+                                            <div class="col-lg-3">
+                                                <label asp-for="CancerTypes"></label>
+                                                <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="Medicines"></label>
+                                                <select asp-for="Medicines" asp-items="Model.SelectMedicines" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="Doctors"></label>
+                                                <select asp-for="Doctors" asp-items="Model.SelectDoctors" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="TreatmentPlaces"></label>
+                                                <select asp-for="TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-row form-group">
+                                            <div class="col-lg-3">
+                                                <label asp-for="CivilState"></label>
+                                                <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="Sex"></label>
+                                                <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label asp-for="FamiliarityGroup"></label>
+                                                <select asp-for="FamiliarityGroup" asp-items="Model.FamiliarityGroups" class="form-control"></select>
+                                            </div>
+                                            <div class="col-lg-3 mt-3">
+                                                <div>
+                                                    <input asp-for="Discharge" />
+                                                    <label asp-for="Discharge"></label>
+                                                </div>
+                                                <div>
+                                                    <input asp-for="Death" />
+                                                    <label asp-for="Death"></label>
+                                                </div>
+                                            </div>
+
+                                        </div>*@
+                                        @*<div class="col-lg-4 form-group row">
+                                            <label class="col-form-label" asp-for="Name"></label>
+                                            <div class="col-lg-9">
+                                                <input asp-for="Name" class="form-control" />
+                                                <span asp-validation-for="Name" class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 form-group row">
+                                            <label class="col-form-label" asp-for="CRM"></label>
+                                            <div class="col-lg-9">
+                                                <input asp-for="CRM" class="form-control" />
+                                                <span asp-validation-for="CRM" class="text-danger"></span>
+                                            </div>
+                                        </div>*@
+                                        <div class="col-lg-4 form-group row">
+                                            <button type="submit" class="btn btn-primary">
+                                                <i class="fas fa-filter"></i> Filtrar
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
                                 <i class="fa fa-male"></i> Pacientes
                             </div>
                             <div class="card-block">
-                                <div class="form-inline">
-                                    <div class="form-group">
-                                        <div class="btn-group">
-                                            @*<a asp-action="AddPatient" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                                <i class="fa fa-plus"></i> Adicionar Paciente
-                                            </a>*@
-                                        </div>
-                                    </div>
+                                <div class="form-inline float-right">
+                                    <a id="addPatientButton" asp-action="AddPatientProfile" data-title="Adicionar Paciente" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                        <i class="fa fa-plus"></i> Adicionar Paciente
+                                    </a>
                                 </div>
-
-                                <hr />
-
-                                <div class="form-row form-group">
-                                    <div class="col-lg-3">
-                                        <label asp-for="CancerTypes"></label>
-                                        <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="Medicines"></label>
-                                        <select asp-for="Medicines" asp-items="Model.SelectMedicines" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="Doctors"></label>
-                                        <select asp-for="Doctors" asp-items="Model.SelectDoctors" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="TreatmentPlaces"></label>
-                                        <select asp-for="TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="form-row form-group">
-                                    <div class="col-lg-3">
-                                        <label asp-for="CivilState"></label>
-                                        <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="Sex"></label>
-                                        <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control">
-                                            <option value=""></option>
-                                        </select>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="FamiliarityGroup"></label>
-                                        <select asp-for="FamiliarityGroup" asp-items="Model.FamiliarityGroups" class="form-control"></select>
-                                    </div>
-                                    <div class="col-lg-3 mt-3">
-                                        <div>
-                                            <input asp-for="Discharge" />
-                                            <label asp-for="Discharge"></label>
-                                        </div>
-                                        <div>
-                                            <input asp-for="Death" />
-                                            <label asp-for="Death"></label>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <hr />
-
                                 <table class="table table-bordered table-striped table-condensed text-center" id="patientTable"></table>
+                                <div id="spinner-container" style="display: none;">
+                                    <i class="fa fa-spinner fa-spin" id="spinner"></i>
+                                </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -129,8 +158,9 @@
     <environment names="Development">
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-        <script src="~/js/patient.js"></script>
         <script src="~/lib/select2/js/select2.min.js"></script>
+        <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+        <script src="~/js/patient.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
