--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientNaturality.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientNaturality.cshtml
@@ -4,8 +4,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="Error"
-      data-ajax-success="AddNaturalitySuccess"
+      data-ajax-failure="error"
+      data-ajax-success="addNaturalitySuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body">
