--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
@@ -5,8 +5,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="Error"
-      data-ajax-success="AddProfileSuccess"
+      data-ajax-failure="error"
+      data-ajax-success="addProfileSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body">
