--- a/_source/LigaCancer/Views/Shared/_Modal.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Modal.cshtml
@@ -1,5 +1,5 @@
 ﻿<div aria-hidden="true" aria-labelledby="modal-action-label" role="dialog" id="modal-action" class="modal fade" data-backdrop="static">
-    <div class="modal-dialog modal-primary">
+    <div class="modal-dialog modal-dialog-centered modal-primary">
         <div class="modal-content" id="modal-content">
             <div class="modal-header">
                 <h5 id="modal-title" class="modal-title"></h5>
