#77 Add edit patient profile

--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -308,11 +308,11 @@
                                     </div>
                                     <div class="col-lg-4">
                                         <strong>Renda Familiar:</strong>
-                                        <span id="familyIncome">@Model.Family?.FamilyIncome.ToString("C2")</span>
+                                        @*<span id="familyIncome">@Model.Family?.FamilyIncome.ToString("C2")</span>*@
                                     </div>
                                     <div class="col-lg-4">
                                         <strong> Renda Per Capita:</strong>
-                                        <span id="perCapitaIncome">@Model.Family?.PerCapitaIncome.ToString("C2")</span>
+                                        @*<span id="perCapitaIncome">@Model.Family?.PerCapitaIncome.ToString("C2")</span>*@
                                     </div>
                                 </div>
 
