--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -113,7 +113,7 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
-                                    <a id="addPatientButton" asp-action="AddPatientProfile" data-title="Adicionar Paciente" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addPatientButton" asp-action="PatientProfile" data-title="Adicionar Paciente" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Paciente
                                     </a>
                                 </div>
