#77 Adjust Patient Profile and Naturality

--- a/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LigaCancer.Models.FormModel.PatientInformationFormModel
 
-<form id="addPatientInformationForm" asp-action="AddPatientInformation"
+<form id="PatientInformationForm" asp-action="AddPatientInformation"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="error"
-      data-ajax-success="addPatientInformationSuccess"
+      data-ajax-success="PatientInformationSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body">
