#71 Added phone crud to edit option on patient

--- a/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
@@ -1,21 +1,16 @@
 ﻿@model LigaCancer.Models.FormModel.PhoneFormModel
 @using LigaCancer.Code
 
-<form asp-action="EditPhone"
+<form id="addPhoneForm" asp-action="AddPhone"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccessPatient"
+      data-ajax-failure="error"
+      data-ajax-success="addPhoneSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <div class="modal-body form-horizontal" id="">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-        <h4>
-            Editar Telefone
-        </h4>
-
+    <div class="modal-body form-horizontal">
+        <input asp-for="PatientId" />
         <div class="form-group">
             <label asp-for="Number" class="control-label"></label>
             <input asp-for="Number" class="form-control" />
