--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -117,10 +117,8 @@
                                         <i class="fa fa-plus"></i> Adicionar Paciente
                                     </a>
                                 </div>
+                                
                                 <table class="table table-bordered table-striped table-condensed text-center" id="patientTable"></table>
-                                <div id="spinner-container" style="display: none;">
-                                    <i class="fa fa-spinner fa-spin" id="spinner"></i>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -136,6 +134,7 @@
 </main>
 
 <partial name="_Modal" />
+<partial name="_ModalSecondary" />
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
