--- a/_source/LigaCancer/wwwroot/css/custom.css
+++ b/_source/LigaCancer/wwwroot/css/custom.css
@@ -11,25 +11,6 @@
     border-radius: 0.25em !important;
 }
 
-#spinner {
-    font-size: 120px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -60px 0 0 -60px;
-}
-
-#spinner-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    /*background-color: black;*/
-    /*opacity: .5;*/
-}
-
 .label-required:after {
     content: "*";
     color: red;
@@ -43,4 +24,12 @@
 
 .filter-button {
     margin-top: 28px;
+}
+
+#modal-action-secondary{
+    z-index: 1060;
+}
+
+.modal-backdrop.fade.show + div {
+    z-index: 1050;
 }
