--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -6,7 +6,7 @@
             <div class="card-block">
                 <input asp-for="PatientId" id="phonePatientId" />
                 <div class="form-inline float-right">
-                    <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Remédio" class="btn btn-primary"
+                    <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Telefone" class="btn btn-primary"
                        data-toggle="modal" data-target="#modal-action-secondary">
                         <i class="fa fa-plus"></i> Adicionar Telefone
                     </a>
