--- a/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
@@ -1,21 +1,16 @@
 ﻿@model LigaCancer.Models.FormModel.AddressFormModel
 @using LigaCancer.Code
 
-<form asp-action="AddAddress"
+<form id="editAddressForm" asp-action="EditAddress"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccessPatient"
+      data-ajax-failure="error"
+      data-ajax-success="editAddressSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal" id="">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-        <h4>
-            Adicionar Endereço
-        </h4>
-
+        <input asp-for="PatientId" />
         <div class="form-group">
             <label asp-for="Street" class="control-label"></label>
             <input asp-for="Street" class="form-control" />
@@ -48,7 +43,7 @@
             </select>
             <span asp-validation-for="ResidenceType" class="text-danger"></span>
         </div>
-        <div class="form-group" id="monthlyResidence" style="display: none;">
+        <div class="form-group" id="monthlyResidence" style="@(Model.ResidenceType == null ? "display: none;" : "")">
             <label asp-for="MonthlyAmmountResidence" class="control-label"></label>
             <input asp-for="MonthlyAmmountResidence" class="form-control" />
             <span asp-validation-for="MonthlyAmmountResidence" class="text-danger"></span>
@@ -58,7 +53,6 @@
             <input asp-for="ObservationAddress" class="form-control" />
             <span asp-validation-for="ObservationAddress" class="text-danger"></span>
         </div>
-        <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
     <partial name="_ModalFooter" />
