--- a/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
@@ -1,21 +1,15 @@
 ﻿@model LigaCancer.Models.FormModel.FamilyMemberFormModel
 @using LigaCancer.Code
 
-<form asp-action="EditFamilyMember"
+<form id="editFamilyMemberForm" asp-action="EditFamilyMember"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccessPatient"
+      data-ajax-failure="error"
+      data-ajax-success="editFamilyMemberSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal" id="">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-        <h4>
-            Editar Membro Familiar
-        </h4>
-
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <input asp-for="Name" class="form-control" />
@@ -41,7 +35,6 @@
             <input asp-for="MonthlyIncome" class="form-control" />
             <span asp-validation-for="MonthlyIncome" class="text-danger"></span>
         </div>
-        <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
     <partial name="_ModalFooter"  />
