--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -12,7 +12,7 @@
                         <span id="monthlyIncome"></span>
                     </div>
                     <div class="col-lg-4">
-                        <strong>Renda Familiar:</strong>
+                        <strong>Renda Familiar Total:</strong>
                         <span id="familyIncome"></span>
                     </div>
                     <div class="col-lg-4">
