--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -34,7 +34,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-filter"></i> Filtros
+                                <i class="fas fa-filter"></i> Pesquisar
                                 <div class="card-header-actions">
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
                                         <i class="fa fa-minus"></i>
