#71 Change Age to DateOf Birth and fix calendar on second modal, and change overlay of second modal

--- a/_source/LigaCancer/wwwroot/css/custom.css
+++ b/_source/LigaCancer/wwwroot/css/custom.css
@@ -30,10 +30,10 @@
     z-index: 1060;
 }
 
-.modal-backdrop.fade.show + div {
-    z-index: 1050;
-}
-
 .modal-elg {
     max-width: 80vw;
+}
+
+.datepicker {
+    z-index: 1070 !important;
 }
