--- a/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
@@ -21,9 +21,9 @@
             <span asp-validation-for="Kinship" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Age" class="control-label"></label>
-            <input asp-for="Age" type="text" class="form-control" />
-            <span asp-validation-for="Age" class="text-danger"></span>
+            <label asp-for="DateOfBirth" class="control-label"></label>
+            <input asp-for="DateOfBirth" type="text" class="form-control" id="dateOfBirth" />
+            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Sex" class="control-label"></label>
